--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
