--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 jwt.secret=myJwtSecret
 jwt.expiration=3600000
+spring.main.allow-circular-references=true
+
