--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -10,5 +10,7 @@ spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=1800000
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+logging.level.org.springframework=DEBUG
+
 
 
