--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-menu": "^2.0.6",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "jsonwebtoken": "^9.0.2",
