List issue by user ID

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.jpa.show-sql=true
 logging.level.org.springframework=DEBUG
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+debug=true
 
 
 
