--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.datasource.hikari.maxLifetime=1800000
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.org.springframework=DEBUG
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 debug=true
