--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-menu": "^2.0.6",
+    "@types/chart.js": "^2.9.41",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "postcss-cli": "^11.0.0",
