--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,11 @@
     "jwt-decode": "^4.0.0",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
+    "react-datepicker": "^7.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.23.1",
+    "react-select": "^5.8.0",
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
