--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -27,6 +27,11 @@
             <version>1.3.2</version> <!-- Use the latest version compatible with your project -->
         </dependency>
         <dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <scope>test</scope>
+</dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-logging</artifactId>
         </dependency>
